 - Mod: Spies take a break after teleporting home.
 - Mod: Improved unsustainable message to make it clearer.
 - Mod: Observatory now displays 30 rows not 25.
 - Mod: Option to send scows back home without any waste.
 - Mod: Update ChiselChat.
 - Mod: Plan list sorting now done more naturally.
 - Mod: Improve message handling speed (deleting, archiving).
 - Mod: spy lists in intel min, merc guild, send-spy tab all use the same ordering.
 - Add: mass_abandon_excavator and mass_abandon_platform APIs.
 - Add: Inbox API call added: trash_messages_where.
 - Add: Add Highest Embassy in your empire to returned get_status.
 - Add: POD timer is now on PCC with varying timer based on PCC level.

3.0905:
 - Mod: Replaced Envolve chat with ChiselChat

3.0904:
 - Fix: Removed cronic duplication in starmap API, hopefully reducing lag
 - Mod: Gratch now more granualar for infiltration times when damaged
 - Mod: If planet is abandoned, spies from elsewhere will be set to Idle when ported home.
 - Fix: Removed any possibility of inter-alliance voting.

3.0903:
 - Fix: Have spies set on propaganda start work immediately.
 - Fix: Stakes no longer go into Members Only Colony Space.
 - Fix: Crater gets cleared if AI is out of space.
 - Fix: Get first 100 spies via prepare_send or fetch that are available.
 - Mod: Oracle of Anid schedules recalculation after a period of work instead of immediately.

3.0902:
 - Add: Jackpot AI
 - Fix: Idle spies that hit max training on check.
 - Fix: Seizing in Neutral Area fails if passed. (Thanks RO)
 - Add: Custom message for upgrades in code.  (so far, just bleeders. Thanks Tower)
 - Fix: No shortcuts via the forbidden zone.
 - Fix: Recalled ships ignore fleet speed.
 - Fix: Snarks splash damage now splash as advertised.

3.0901:
 - API: Spaceport ship filter includes all relevant tasks.
 - Fix: Parliament actually looks at leader's embassy for max members.
 - Mod: Saben, Diablotin, Cult get some timing changes.

3.0900: