@@ -11,7 +11,8 @@
  - Mod: Update ChiselChat.
  - Mod: Plan list sorting now done more naturally.
  - Mod: Improve message handling speed (deleting, archiving).
- - Mod: spy lists in intel min, merc guild, send-spy tab all use the same ordering.
+ - Mod: Spy lists in intel min, merc guild, send-spy tab all use the same ordering.
+ - Mod: Planets can't jump into the neutral zone when it has too many ships in transit.
  - Add: mass_abandon_excavator and mass_abandon_platform APIs.
  - Add: Inbox API call added: trash_messages_where.
  - Add: Add Highest Embassy in your empire to returned get_status.
